changes requested by editorial staff

--- a/ANS-winter2014/7Eqn_ANS_2014/ANS_2014_TrackingID_11663.tex
+++ b/ANS-winter2014/7Eqn_ANS_2014/ANS_2014_TrackingID_11663.tex
@@ -8,7 +8,7 @@ $^{*}$Department of Nuclear Engineering, Texas A\&M University,
 $^\dagger$Idaho National Laboratory
 }
 
-\email{delchmo@tamu.edu \and jean.ragusa@.tamu.edu \and ray.berry@inl.gov}
+\email{delcmo@tamu.edu \and jean.ragusa@.tamu.edu \and ray.berry@inl.gov}
 
 % Optional disclaimer: remove this command to hide
 %\disclaimer{Notice: This manuscript is a work of fiction. Any resemblance to actual articles, living or dead, is purely coincidental.}
@@ -251,34 +251,40 @@ We have presented an extension of the entropy viscosity method to the 1-D 7-equa
 
 \begin{figure}[H]
         \centering
-        \begin{subfigure}[b]{0.5\textwidth}
-                \centering
-                \includegraphics[width=\textwidth]{plots/relaxation_two_phases_pressure.png}
-                \caption{Pressure}
+        %\begin{subfigure}[b]{0.5\textwidth}
+                %\centering
+                \includegraphics[width=0.495\textwidth]{plots/relaxation_two_phases_pressure.png}
+                \caption{Pressure at steady state.}
                 \label{fig:pressure}
-        \end{subfigure}%
-
-        \begin{subfigure}[b]{0.5\textwidth}
-                \centering
-                \includegraphics[width=\textwidth]{plots/relaxation_two_phases_density.png}
-                \caption{Density}
-                \label{fig:density}
-        \end{subfigure}%
-
-        \begin{subfigure}[b]{0.495\textwidth}
-                \centering
-                \includegraphics[width=\textwidth]{plots/relaxation_two_phases_velocity.png}
-                \caption{Velocity}
-                \label{fig:velocity}
-        \end{subfigure}
+        %\end{subfigure}%
 \end{figure}
 \begin{figure}[H]
-        \begin{subfigure}[b]{0.495\textwidth}
+
+        %\begin{subfigure}[b]{0.5\textwidth}
+                %\centering
+                \includegraphics[width=0.495\textwidth]{plots/relaxation_two_phases_density.png}
+                \caption{Density at steady state.}
+                \label{fig:density}
+        %\end{subfigure}%
+\end{figure}
+\begin{figure}[H]
+        %\begin{subfigure}[b]{0.495\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{plots/relaxation_two_phases_volume_fraction.png}
-                \caption{Volume fraction}
+                \includegraphics[width=0.495\textwidth]{plots/relaxation_two_phases_velocity.png}
+                \caption{Velocity at steady state.}
+                \label{fig:velocity}
+        %\end{subfigure}
+\end{figure}
+\begin{figure}[H]
+        %\begin{subfigure}[b]{0.495\textwidth}
+                \centering
+                \includegraphics[width=0.495\textwidth]{plots/relaxation_two_phases_volume_fraction.png}
+                \caption{Volume fraction at steady state.}
                 \label{fig:volume_fraction}
-        \end{subfigure}
+        %\end{subfigure}
+				%\caption{Pressure, density, velocity and void fraction at steady state.}
+\end{figure}
+\begin{figure}[H]
         
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
@@ -293,14 +299,15 @@ We have presented an extension of the entropy viscosity method to the 1-D 7-equa
                 \caption{Viscosity coefficients for phase $2$}
                 \label{fig:viscosity_coeff_vap}
         \end{subfigure}        
+        \caption{Artificial viscosity coefficients.}
 \end{figure}
 \begin{figure}[H]				
-        \begin{subfigure}[b]{0.495\textwidth}
+        %\begin{subfigure}[b]{0.495\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{plots/relaxation_two_phases_liquid_beta.png}
-                \caption{Viscosity coefficients for volume fraction}
+                \includegraphics[width=0.495\textwidth]{plots/relaxation_two_phases_liquid_beta.png}
+                \caption{Viscosity coefficients for the volume fraction.}
                 \label{fig:viscosity_coeff_beta}
-        \end{subfigure}        
+        %\end{subfigure}   
 \end{figure}
 %\begin{figure}[H]
 %\centering
